[package]
name = "legaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ash = "0.37.3"
cgmath = { version = "0.18.0", features = ["rand", "serde", "mint", "swizzle"] }
mint = { version = "0.5.9", features = ["serde"] }
rand = { version = "0.8.5", features = ["log", "serde", "serde1"] }
serde = "1.0.193"
thiserror = "1.0.50"
winit = { version = "0.29.4", features = ["serde", "mint"] }
pretty_env_logger = "0.5.0"
log = "0.4.20"


[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }